# FastFuzzyMatching

./: .gitignore  README.md  fastfuzzymatch.py  pyproject.toml
test/: test.ipynb
