[tool.poetry]
name = "fastfuzzymatching"
version = "0.1.0"
description = ""
authors = ["iliab <ilia.bukin1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
thefuzz = "^0.22.1"
scikit-learn = "^1.5.1"
jupyter = "^1.0.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
